# pdm-env-starter

./: .gitignore  README.md  RENAME_TO.gitignore  RENAME_TO_CHANGELOG.md  RENAME_TO_THIRD_PARTY_NOTICES.md  THIRD_PARTY_NOTICES.md  pyproject.toml
env/: RENAME_TO_development_secrets.py  common_env.py  development_env.py  production_env.py  staging_env.py  testing_env.py
scripts/: DELETE_ME_find_python_versions.sh  create_pdm_app.sh  find_project_root.sh  load_env.py  run_with_env.sh
src/: echo_env.py
